// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe mostrar correctamente la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product img"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage Debe mostrar el componente con la imagen personalizada 1`] = `
<img
  alt="Product img"
  className="productImg undefined"
  src="ddd.png"
/>
`;
